--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>kongo</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<!-- SMUI Styles -->
+		<link rel="stylesheet" href="/smui.css" />
+		<!-- Material Icons -->
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+		<!-- Roboto -->
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" />
+		<!-- Roboto Mono -->
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
