--- a/src/app.html
+++ b/src/app.html
@@ -18,7 +18,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" style="width: 80%; margin: 0 auto">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
